--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Tags in Blog
-image: 10.jpg
+title: Arsip Data
+image: 
 permalink: /tags/
 ---
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
